@@ -1,3 +1,5 @@
+  - Fix assigned clothes top, bottom syntax
+
 v0.0.2    Thu, 12 May 2016 12:34:40 +0900
   - 정해진 표를 통해 의류의 수선 사이즈를 제안
   - Add OpenCloset::Constants::Status
